--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immer": "^6.0.3",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.2.0",
     "react-i18next": "^11.3.4",
