--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.2.0",
     "react-i18next": "^11.3.4",
+    "react-modal": "^3.11.2",
+    "react-modal-hook": "^3.0.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
+    "react-table": "^7.0.4",
+    "react-three-fiber": "^4.1.1",
+    "three": "^0.115.0",
+    "three.meshline": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
